[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Levels/Level1-v2.gd" type="Script" id=1]
[ext_resource path="res://Game/Mechanisms/EnemyObjectsCreator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Fonts/Nokia/nokia.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]

resource_name = "show_menu_button"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLayer/Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 256, -144 ), Vector2( 256, 176 ) ]
}

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "show_label"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLayer/LevelLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( -272, 0 ), Vector2( 272, 0 ), Vector2( 277, 11 ), Vector2( 272, 0 ), Vector2( 816, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuLayer/LevelLabel:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuLayer/LevelLabel:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 0.25 ),
"update": 0,
"values": [ Vector2( 264, 80 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuLayer/LevelLabel:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.3, 1.7, 1.9, 2, 3 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25 ),
"update": 0,
"values": [ 0.0, 0.0, -21.0658, 15.2202, -13.5195, 0.0, 0.0 ]
}

[node name="Level1-v2" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="EnemyObjectsCreator" parent="." index="0" instance=ExtResource( 2 )]

[node name="Anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show_menu_button = SubResource( 1 )
blend_times = [  ]

[node name="MenuLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Menu" type="Button" parent="MenuLayer" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -384.0
margin_right = 144.0
margin_bottom = -266.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="LevelLabel" type="Label" parent="MenuLayer" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -672.0
margin_right = -408.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 124.996, 37.6838 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.100403, 0.140026, 0.734375, 1 )
custom_colors/font_color_shadow = Color( 0.313685, 0.227417, 0.808594, 1 )
text = "Level 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Speed" type="Label" parent="MenuLayer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 432.0
margin_right = 800.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.984375, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.773438, 0.087616, 0.087616, 1 )
text = "Speed"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="AnimLabel" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show_label = SubResource( 3 )
blend_times = [  ]

[node name="SpeedChange" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="pressed" from="MenuLayer/Menu" to="." method="_on_Menu_pressed"]

[connection signal="timeout" from="SpeedChange" to="." method="_on_SpeedChange_timeout"]


